src/format/snapshots/braze_sync__format__snapshot_tests__content_block_orphan_json.snap
---
source: src/format/snapshot_tests.rs
expression: "JsonFormatter.format(&fixtures::content_block_orphan())"
---
{
  "version": 1,
  "summary": {
    "changed": 1,
    "in_sync": 0,
    "destructive": 0,
    "orphan": 1,
    "gating_drift": 1,
    "report_only_drift": 0
  },
  "diffs": [
    {
      "kind": "content_block",
      "name": "legacy_promo",
      "op": "unchanged",
      "drift_tier": "gating",
      "orphan": true
    }
  ]
}
