src/format/snapshots/braze_sync__format__snapshot_tests__empty_json.snap
---
source: src/format/snapshot_tests.rs
expression: "JsonFormatter.format(&fixtures::empty())"
---
{
  "version": 1,
  "summary": {
    "changed": 0,
    "in_sync": 0,
    "destructive": 0,
    "orphan": 0,
    "gating_drift": 0,
    "report_only_drift": 0
  },
  "diffs": []
}
