src/format/snapshots/braze_sync__format__snapshot_tests__empty_table.snap
---
source: src/format/snapshot_tests.rs
expression: "TableFormatter::default().format(&fixtures::empty())"
---
Summary: 0 changed, 0 in sync, 0 orphan, 0 destructive
