src/format/snapshots/braze_sync__format__snapshot_tests__mostly_in_sync_json.snap
---
source: src/format/snapshot_tests.rs
expression: "JsonFormatter.format(&fixtures::mostly_in_sync_with_one_change())"
---
{
  "version": 1,
  "summary": {
    "changed": 2,
    "in_sync": 6,
    "destructive": 0,
    "orphan": 1,
    "gating_drift": 2,
    "report_only_drift": 0
  },
  "diffs": [
    {
      "kind": "catalog_schema",
      "name": "stable",
      "op": "unchanged",
      "drift_tier": "none",
      "field_diffs": []
    },
    {
      "kind": "content_block",
      "name": "footer",
      "op": "unchanged",
      "drift_tier": "none",
      "orphan": false
    },
    {
      "kind": "content_block",
      "name": "promo",
      "op": "modified",
      "drift_tier": "gating",
      "orphan": false,
      "text_diff": {
        "additions": 5,
        "deletions": 3
      }
    },
    {
      "kind": "email_template",
      "name": "receipt",
      "op": "unchanged",
      "drift_tier": "none",
      "subject_changed": false,
      "metadata_changed": false,
      "orphan": false
    },
    {
      "kind": "email_template",
      "name": "legacy_welcome",
      "op": "unchanged",
      "drift_tier": "gating",
      "subject_changed": false,
      "metadata_changed": false,
      "orphan": true
    },
    {
      "kind": "custom_attribute",
      "name": "visit_count",
      "op": "unchanged",
      "drift_tier": "none",
      "hints": [
        "type mismatch: local number vs Braze string (run export to update)"
      ]
    },
    {
      "kind": "tag",
      "name": "transactional",
      "op": "unchanged",
      "drift_tier": "none"
    },
    {
      "kind": "tag",
      "name": "seasonal",
      "op": "unchanged",
      "drift_tier": "none",
      "hints": [
        "registered in two environments with different casing"
      ]
    }
  ]
}
